# MurirTinServer

./: .env  .gitignore  README.md  bus_location.py  config.py  database.py  main.py  pyproject.toml  requirements.txt  vercel.json
app/: exceptions.py  main.py
app/api/: Bus.py
app/api/Auth/: router.py
app/crud/Bus/: get_bus.py
app/crud/User/: create_user.py  get_user_info.py
app/database/: database.py  init_db.py
app/models/: BusStop.py  Route.py  User.py
app/schemas/: BusStopSchema.py  UserSchema.py
app/services/Auth/: login_validation.py  register_user.py
app/services/Bus/: get_all_buses_by_route.py  get_x.py
app/utils/: password.py
data/: murirtin.db
models/: company.py  complaint.py  nearest_bus_stop.py  qr_code.py  react.py  ticket.py  user.py
routers/: admin.py  auth.py  bus.py  complaint.py  issues.py  profile.py  qr_code.py  signup.py  ticket.py
services/: admin_service.py  auth_service.py  complaint_service.py  qr_service.py  react_service.py  signup_service.py  ticket_service.py
services/Bus/: get_x.py
utils/: jwt_token.py
